# uv-python-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  test-writer.md
.claude/hooks/: pre-push-check.sh  protect-files.sh
.claude/rules/: code-style.md  design-principles.md  error-handling.md  git-conventions.md  python-idioms.md  tdd-workflow.md  testing.md
.claude/skills/commit/: SKILL.md
.claude/skills/issue/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/tdd/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  cli-release.yml  dependabot-auto-merge.yml  docs.yml  e2e.yml  release-and-tag.yml  release.yml
cli/: README.md  pyproject.toml
cli/src/pypkgkit/: __init__.py  __main__.py  _util.py  cli.py  github.py  init_bridge.py  prompt.py  scaffold.py
cli/tests/: conftest.py  test_cli.py  test_github.py  test_init_bridge.py  test_prompt.py  test_scaffold.py
docs/: api.md  index.md  publishing.md
python_package_template/: __init__.py  __main__.py  main.py
scripts/: init.py  init.sh  setup-repo.sh
tests/: conftest.py  test_init.py  test_main.py  test_main_module.py
tests/e2e/: Dockerfile  run-e2e.sh  verify-project.sh
tests/template/: conftest.py  test_init_file_ops.py  test_init_flags.py  test_init_license.py  test_init_validation.py  test_template_structure.py
